WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290943
Have ASSERTs fail using __builtin_trap on ASAN builds.
https://bugs.webkit.org/show_bug.cgi?id=290943
Summary
Have ASSERTs fail using __builtin_trap on ASAN builds.
Mark Lam
Reported
2025-04-02 13:27:10 PDT
This allows for ASAN's handler to process the trap and provide debugging info.
rdar://141134057
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2025-04-02 13:36:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43484
EWS
Comment 2
2025-04-03 08:14:09 PDT
Committed
293158@main
(6c9e4739f551): <
https://commits.webkit.org/293158@main
> Reviewed commits have been landed. Closing PR #43484 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug