Have ASSERTs fail using __builtin_trap on ASAN builds. https://bugs.webkit.org/show_bug.cgi?id=290943 rdar://141134057

Reviewed by Keith Miller.

This allows for ASAN's handler to process the trap and provide debugging info.

Also, update the non-ASAN version of the inline WTFCrashWithInfo() to end with a
__builtin_unreachable() instead of __builtin_trap().  This makes it match the behavior
of other instances of WTFCrashWithInfo() which take additional parameters.

* Source/WTF/wtf/Assertions.cpp:
* Source/WTF/wtf/Assertions.h:
(WTFCrashWithInfo):

Canonical link: https://commits.webkit.org/293158@main